--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
     </div>
 
     <script>
-        const socket = io('http://localhost:3000');
+        const socket = io();
         const img = document.getElementById('streamDisplay');
         const urlInput = document.getElementById('urlInput');
         
